--- a/package.json
+++ b/package.json
@@ -38,15 +38,17 @@
     "graphql-tools": "^7.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "typescript": "^3.9.7",
+    "ts-node": "9.0.0",
+    "@types/node": "^13.13.30",
+    "@types/express": "^4.17.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
-    "@types/node": "^13.13.30",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
@@ -58,9 +60,7 @@
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
     "ts-loader": "^6.2.2",
-    "ts-node": "9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.9.7",
     "gts": "^3.0.2"
   },
   "jest": {
